VAN-9873: fix line break in advance

--- a/vtr-ui/src/app/components/widgets/widget-carousel/widget-carousel.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-carousel/widget-carousel.component.scss
@@ -43,7 +43,7 @@
 			font-size: 2.4rem;//3rem
 			color: $light;
 			text-shadow: 0.2rem 0.2rem 0.2rem $shade_extradark;
-			max-width: 60%;
+			//max-width: 60%;
 			/*@media #{$mediaquery_X31} {
 				max-width: 80%;
 				font-size: 2.4rem;
